# UAP_Pembelajaran_Mesin_2025

./: .gitignore  README.md  UAP.ipynb  app.py  pyproject.toml
DATA/LSTM/: model_lstm_gojek.h5  tokenizer.pickle
DATA/distilbert/: config.json  tf_model.h5  tokenizer.json
DATA/indobert/: config.json  tf_model.h5
