[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Firman", email = "firman@example.com"},
]
dependencies = ["streamlit>=1.52.2", "tensorflow>=2.20.0", "scikit-learn>=1.8.0", "joblib>=1.5.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
